src-ken&y/objects/Merge_Document__c.object
<CustomObject>
    <customHelpPage>HelpMerge</customHelpPage>
    <description>Generate custom documents from Kenandy data and Customer templates</description>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name_Format__c</fullName>
        <description>Prefix text to use when naming documents that result from a merge process</description>
        <label>Document Name Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Target_Object_Label__c</fullName>
        <label>Target Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Merge Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merge Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>